<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  

  <groupId>io.crums</groupId>
  <artifactId>ledgers</artifactId>
  <version>${revision}</version>

  <packaging>pom</packaging>

  <name>${project.groupId}:${project.artifactId}</name>
  <url>https://crums.io/project/ledgers</url>
  
  <description>
    Collection of modules and tools for maintaining tamper proof, evolving, historical private ledgers
    and for differentially revealing (reporting) any of their parts in an efficient, provable way.
  </description>
  
  
  <properties>
    <revision>0.6.0-SNAPSHOT</revision>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
    <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
    <flatten.version>1.2.2</flatten.version>
    <crums.util>1.0.4-SNAPSHOT</crums.util>
    <crums.core>[1.0.0,)</crums.core>
    <native.maven.plugin.version>0.9.13</native.maven.plugin.version>
    
  </properties>
  
  

  <licenses>
    <license>
      <name>GNU Affero General Public License, Version 3</name>
      <url>https://www.gnu.org/licenses/agpl-3.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Babak Farhang</name>
      <email>babak@crums.io</email>
      <organization>Crums</organization>
      <organizationUrl>https://crums.io</organizationUrl>
    </developer>
  </developers>
  
  <profiles>
    <profile>
      <id>deploy-profile</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.5</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  
  <scm>
    <connection>scm:git:git://github.com/crums-io/skipledger.git</connection>
    <developerConnection>scm:git:ssh://github.com:crums-io/skipledger.git</developerConnection>
    <url>http://github.com/crums-io/skipledger/tree/master</url>
  </scm>
  
  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    
    <repository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    
  </distributionManagement>
  
  
  

  
  
  
  <!-- For SNAPSHOT releases of dependencies
  <repositories>
    <repository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
  </repositories>
  -->
  
  
  <modules>
    <module>skipledger-base</module>
    <module>skipledger</module>
    <module>skipledger-sql</module>
    <module>reports</module>
    <module>sldg</module>
    <module>mrsl</module>
    <module>b64</module>
    <module>report-template</module>
    <module>logledge</module>
    <module>jurno</module>
  </modules>
  


  <build>

    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin}</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- w/o plugin below, sub modules don't inherit $revision string -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>${flatten.version}</version>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>resolveCiFriendliesOnly</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      
      
      




      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.4.1</version>
        <configuration>
          <!--
          Note the following is necessary only if _other_ javadoc errors are present,
          i.e. unnecessary:
          
          <sourceFileExcludes>module-info.java</sourceFileExcludes>
          
          -->
          <!--
          Following are defaults:
          
          <quiet>false</quiet> (not exactly "quiet" when set to true)
          <failOnWarnings>false</failOnWarnings>
          <failOnError>true</failOnError>
          
          -->
          
          <bottom>
            <![CDATA[
            <table width="100%">
            <tr>
            <td style="text-align: left;">&nbsp;io.crums:]]>${project.artifactId} v${revision}
            <![CDATA[ <br/>
            &nbsp;GNU Affero General Public License v3
            (<a href="https://www.gnu.org/licenses/agpl-3.0.txt">AGPL</a>)
            </td>
            <td style="text-align: right;"><br/>&copy; 2020-2024 <a href="http://crums.io">crums.io</a> All Rights Reserved.&nbsp;&nbsp;</td>
            </tr>
            </table>
            ]]>
          </bottom>
          
        </configuration>
        
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            </execution>
        </executions>
      </plugin>
        
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.13</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>

    </plugins>

  </build>


  <dependencies>

    <dependency>
      <groupId>io.crums</groupId>
      <artifactId>io-util</artifactId>
      <version>${crums.util}</version>
    </dependency>

    <!-- TEST scope -->
    
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>io.crums</groupId>
      <artifactId>unit-io</artifactId>
      <version>1.0.0</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

</project>




